<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.LoginActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_login_regis"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="22sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:startIconDrawable="@drawable/ic_email"
        app:endIconMode="clear_text"
        app:helperTextEnabled="true"
        app:helperText="@string/email">

        <com.dicoding.soulsupport.ui.costum.MyTextInput
            android:id="@+id/ed_login_email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ln_in_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_lock"
        app:helperTextEnabled="true"
        app:helperText="@string/password"
        app:counterEnabled="true"
        app:counterMaxLength="10">

        <com.dicoding.soulsupport.ui.costum.MyTextInput
            android:id="@+id/ed_login_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login_masuk"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:contentDescription="@string/masuk"
        android:layout_marginTop="100dp"
        android:text="@string/masuk" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_account"
        android:textSize="12sp" />

</LinearLayout>