<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardNote"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    card_view:cardElevation="10dp"
    android:layout_marginStart="30dp"
    android:backgroundTint="@color/primary_50"
    android:layout_marginEnd="30dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    card_view:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/item_gambar_article"
            android:src="@drawable/img_item_article"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:maxWidth="200dp"
            android:text="@string/tv_title_article"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
            android:textSize="14sp"
            card_view:layout_constraintStart_toEndOf="@+id/iv_article"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_desc_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="210dp"
            android:maxHeight="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/desc_onboarding3"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_regular"
            card_view:layout_constraintStart_toEndOf="@+id/iv_article"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_title_article" />

        <TextView
            android:id="@+id/tv_next_swipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keterangan_article"
            android:textSize="11sp"
            android:fontFamily="@font/poppins_light_italic"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_desc_article"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>